tags/2013-08-29_cppreference/Archive/2ed21d0f504e9e48a379cc09ed114701-e223fd4a885a77b520bbfe69dda8fb91/output
+ clang++ -std=c++11 main.cpp
main.cpp:29:5: error: no matching function for call to 'memset_if_pod_else_error'
    memset(&np, 0, sizeof(np));
    ^~~~~~
main.cpp:10:16: note: expanded from macro 'memset'
#define memset memset_if_pod_else_error
               ^~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:8:41: note: candidate template ignored: disabled by 'enable_if' [with T = nonpod]
using VoidPtr = typename std::enable_if<std::is_pod<T>::value, void*>::type;
                                        ^
1 error generated.
